plugins/kotlin/idea/tests/testData/multiplatform/aliasesTypeMismatch/jvmLibrary/bindings.kt
actual typealias <!LINE_MARKER("descr='Has expects in commonLibrary module'")!>MyException<!> = platform.lib.MyException

actual typealias <!ACTUAL_CLASSIFIER_MUST_HAVE_THE_SAME_SUPERTYPES_AS_NON_FINAL_EXPECT_CLASSIFIER, LINE_MARKER("descr='Has expects in commonLibrary module'")!>MyIllegalStateException<!> = platform.lib.MyIllegalStateException
